--- a/.github/workflows/linux-test.yml
+++ b/.github/workflows/linux-test.yml
@@ -1,4 +1,4 @@
-name: Should Exit
+name: Linux Test
 
 on:
   workflow_dispatch:
@@ -30,4 +30,4 @@ jobs:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true
     - name: Run the special test task
-      run: bundle exec rspec spec/ci/failed.rb
+      run: bundle exec ruby lib/libconsole/linux/raw_test.rb
